# spatiotemporal-bilateral-gradient-filtering

./: .gitignore  README.md  optimizers.py  pyproject.toml
1d_signal/: figures.ipynb  filters.py  optimizers.py
2d_texture/: filters.py
2d_texture/data/plane/: scene_float.xml
2d_texture/data/plane/textures/: textured_roughness.exr
3d_volume/: figures.ipynb  filters.py
